--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 button[aria-label="Toggle full screen"],
-button[aria-label="Show/Hide filters"] {
+button[aria-label="Show/Hide filters"],
+button[aria-label="Show/Hide columns"] {
     display: none;
 }
 
 .MuiTextField-root {
     width: 240px;
+}
+
+body {
+    overflow: hidden;
 }
