--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,11 @@ header.MuiAppBar-root {
 .MuiTabScrollButton-root {
     width: 25px !important;
 }
+
+.cell-value {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 100px;
+    /* Set the maximum width here */
+}
