--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 }
 
 header.MuiAppBar-root {
-    background-color: #0c103d;
+    background-color: #151b3d;
 }
 
 .MuiTabScrollButton-root {
