--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 button[aria-label="Show/Hide filters"],
-button[aria-label="Show/Hide columns"] {
+button[aria-label="Show/Hide columns"],
+button[aria-label="Toggle density"] {
     display: none;
 }
 
@@ -8,19 +9,34 @@ body {
 }
 
 header.MuiAppBar-root {
-    background-color: #151b3d;
+    background-color: #13044f;
 }
 
 .MuiTabScrollButton-root {
-    width: 25px !important;
+    width: 20px !important;
 }
 
 .cell-value {
+    position: relative;
+    height: 100%;
+}
+
+.cell-value-m {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    max-width: 90px;
-    /* Set the maximum width here */
+    max-width: 100px;
+}
+
+.cell-label {
+    margin-left: 25px;
+}
+
+img {
+    position: absolute;
+    top: 0;
+    height: 20px;
+    width: 20px;
 }
 
 .isTop {
@@ -45,4 +61,25 @@ a:hover {
 
 table {
     user-select: none;
+}
+
+.i-cell-value {
+    width: 100px;
+    white-space: normal;
+    overflow: hidden;
+    width: 180px;
+}
+
+.MuiTabs-root {
+    min-height: 40px !important;
+
+    .MuiTab-root {
+        min-height: 40px !important;
+        min-width: 90px !important;
+        padding: 10px !important;
+    }
+}
+
+.MuiInputBase-input {
+    height: 20px !important;
 }
