--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  overflow: hidden;
+  overflow: auto;
 }
 
 .logo {
@@ -97,7 +97,7 @@ table {
 
 .back-link {
   position: relative;
-  top: -5px;
+  top: 5px;
   left: 10px;
 }
 
