--- a/src/App.css
+++ b/src/App.css
@@ -120,3 +120,13 @@ table {
 .disclaimer-link {
   color: inherit;
 }
+
+.calc-label {
+  font-weight: bold;
+  font-size: 0.875rem;
+}
+
+.calc-label-1 {
+  font-size: 16px;
+  font-weight: bold;
+}
