--- a/src/App.css
+++ b/src/App.css
@@ -130,3 +130,14 @@ table {
   font-size: 16px;
   font-weight: bold;
 }
+
+.calc-form .MuiSelect-select,
+.calc-form .MuiInputBase-input {
+  padding: 6px 14px;
+}
+
+.text-converted {
+  position: absolute;
+  font-size: 12px;
+  margin-top: 1px;
+}
