--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,10 @@ table {
 .calc-label-1 {
   font-size: 16px;
   font-weight: bold;
+  margin-bottom: 10px !important;
+  display: inline-flex;
+  position: relative;
+  top: -2px;
 }
 
 .calc-form .MuiSelect-select,
@@ -139,5 +143,5 @@ table {
 .text-converted {
   position: absolute;
   font-size: 12px;
-  margin-top: 1px;
+  margin-top: 2px;
 }
