--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,9 @@ table {
 }
 
 .i-cell-value {
-  width: 100px;
+  width: 180px;
   white-space: normal;
   overflow: hidden;
-  width: 180px;
 }
 
 .MuiTabs-root {
@@ -144,4 +143,28 @@ table {
   position: absolute;
   font-size: 12px;
   margin-top: 2px;
+}
+
+header a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.i-since {
+  background: #4e342e;
+  color: white;
+  font-size: 11p;
+  border-radius: 12px 0 0 12px;
+  padding: 6px;
+  padding-left: 12px;
+  padding-right: 10px;
+
+  svg {
+    font-size: 16px;
+  }
+
+  p {
+    font-size: 11px;
+    font-weight: bold;
+  }
 }
