--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,7 @@ header a {
 }
 
 .i-since {
-  background: #4e342e;
+  background: #6d4c41;
   color: white;
   font-size: 11p;
   border-radius: 12px 0 0 12px;
@@ -166,5 +166,20 @@ header a {
   p {
     font-size: 11px;
     font-weight: bold;
+  }
+}
+
+.i-card {
+  .MuiFormControl-root {
+    width: 100%;
+  }
+
+  .i-name {
+    font-weight: bold;
+    font-size: 16px;
+  }
+
+  .i-value {
+    font-size: 18px;
   }
 }
