--- a/src/App.css
+++ b/src/App.css
@@ -158,11 +158,13 @@ header a {
 .i-since {
   background: #6d4c41;
   color: white;
-  font-size: 11p;
-  border-radius: 12px 0 0 12px;
+  font-size: 11px;
+  border-radius: 0px 0 0 6px;
   padding: 6px;
   padding-left: 12px;
   padding-right: 10px;
+  position: relative;
+  top: -16px;
 
   svg {
     font-size: 16px;
@@ -218,22 +220,24 @@ header a {
   margin-left: 2px;
 }
 
-.app-light {
-  .home-intro {
-    color: navy;
-    font-size: 22px;
-  }
-  .home-heading {
-    color: navy;
-  }
-}
-
 .home-intro-logo {
   font-weight: bold;
 }
 
 .video-cnt {
-  height: 330px;
+  height: 300px;
+  padding-left: 5px;
+  padding-right: 20px;
+  overflow: hidden;
+  video {
+    margin-top: -6px;
+  }
+}
+
+.video-cnt-1 {
+  height: 400px;
+  padding-left: 5px;
+  padding-right: 20px;
   overflow: hidden;
   video {
   }
@@ -245,4 +249,66 @@ header a {
   width: 100%;
   text-decoration: none;
   color: inherit;
+}
+
+.home-link {
+  color: inherit;
+}
+
+.carousel {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 30px;
+}
+
+.carousel-inner {
+  display: flex;
+  width: 300%; /* Adjust based on the number of items */
+  animation: slide 12s infinite linear;
+}
+
+.carousel-item {
+  width: 33.33%; /* Adjust based on the number of items */
+  box-sizing: border-box;
+}
+
+.carousel img {
+  width: 100%;
+  display: block;
+}
+
+@keyframes slide {
+  0%,
+  16.66% {
+    transform: translateX(0);
+  }
+  33.33%,
+  49.99% {
+    transform: translateX(-33.33%);
+  }
+  66.66%,
+  83.33% {
+    transform: translateX(-66.66%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.stats-img {
+  width: 100%;
+  margin-top: 30px;
+}
+
+.app-light {
+  .home-intro {
+    border-radius: 30px;
+    label {
+      color: navy;
+      font-weight: bold;
+    }
+  }
 }
